--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -18,6 +18,8 @@ body {
   min-height: 100vh;
   background-color: #f4f5f8;
   color: $brand-dark;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
 
 img {
@@ -63,6 +65,7 @@ a {
   width: 100%;
   padding-left: 16px;
   padding-right: 16px;
+  box-sizing: border-box;
 
   @include respond(tablet) {
     padding-left: 20px;
@@ -73,5 +76,12 @@ a {
     padding-left: 16px;
     padding-right: 16px;
   }
+}
+
+// Ensure text doesn't overflow on mobile
+h1, h2, h3, h4, h5, h6, p, span, a, li {
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  hyphens: auto;
 }
 
